feat(server): synchronize development plugins without restarting
